bloom-room-web/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bloom-room-web-service
  namespace: bloom-room-web
spec:
  selector:
    app: bloom-room-web
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
