bloom-room-web/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bloom-room-web-ingress
  namespace: bloom-room-web
spec:
  ingressClassName: traefik
  rules:
    - host: bloomroom.michaelswebstuff.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: bloom-room-web-service
                port:
                  number: 80
  tls:
    - hosts:
        - bloomroom.michaelswebstuff.com
      secretName: bloom-room-web-tls
